# blok-deployed

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: 04_persona_profiling.ipynb
notebooks/outputs/05_agent_simulation/: simulation_results.csv
scripts/: evaluate.py  run_pipeline.py
src/persona_clustering/: __init__.py  config.py
src/persona_clustering/data/: loader.py
src/persona_clustering/features/: engineering.py
src/persona_clustering/models/: clustering.py
src/persona_clustering/personas/: agent.py  profiler.py
tests/: test_pipeline.py
