[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-clustering"
version = "0.1.0"
description = "Persona-based behavioral clustering and simulation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
agent = ["anthropic>=0.40.0"]
dev = ["pytest>=7.0"]
all = ["persona-clustering[agent,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
